# rust-clean-architecture-v1

./: Cargo.toml  README.md  Setting.toml
diagrams/: business_diagram.mmd
migrations/: mygamedb.sql
src/: database.rs  lib.rs  main.rs  setting.rs  time_helper.rs  tracer.rs
src/entities/: items.rs
src/handlers/: mod.rs  staff.rs
src/models/: error.rs  item.rs  mod.rs
src/repositories/: items.rs  mod.rs  staff.rs
src/usecases/: mod.rs  staff.rs  staff_test.rs
tracing-span/: Cargo.toml
tracing-span/src/: lib.rs
